<resources>
    <string name="app_name">Greenspace</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="home">Home</string>
    <string name="log_in">Log In</string>
    <string name="email_address">Email Address</string>
    <string name="done">Done</string>
    <string name="password">Password</string>
    <string name="type_password">type password</string>
    <string name="type_email">type email</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="done">Done</string>
    <string name="type_username">type username</string>
    <string name="type_email">type email</string>
    <string name="type_password">type password</string>
    <string name="type_name">type name</string>
    <string name="greenspace">Greenspace</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="plant">plant</string>
</resources>